# cortex

./: .gitignore  AGENTS.md  AGENT_RULES.md  CHANGELOG.md  CLAUDE.md  OVERNIGHT_TASK.md  README.md  RELEASE-PLAN.md  ai-agent-config-generators.json  ai-agent-memory-tools.json  install.sh
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: auto-improver.md  eval-runner.md
.claude/rules/: markdown-conventions.md  safety.md
claude-code-auto-research/: .gitignore  DOCUMENTATION.md  README.md  config.json  measure.py  prepare.py  program.md  progress.py  run.py
claude-code-auto-research/evals/: subagent-expectations.json  trigger-evals.json
commands/: scaffold-audit.md  scaffold-discover.md  scaffold-migrate.md  scaffold-optimize.md  scaffold-toolbox.md  scaffold.md
docs/: autoresearch-integration.md  deep-dive-audit-2026-04-03.md  migration-plan.md  openspace-analysis.md
hooks/: hooks.json
issues/: ALL-KNOWN-ISSUES.md
reports/: claude-code-opus-cortex-audit-report.md  claude.md  gemini-3-1-pro-cortex-audit-report.md  perplexity.md
skills/scaffold/: SKILL.md
test/fixtures/migration-py-to-ts/: Dockerfile  openapi.yaml  package.json  pyproject.toml  tsconfig.json
test/fixtures/migration-py-to-ts/.github/workflows/: ci.yml
test/fixtures/migration-py-to-ts/src/python/: main.py  models.py  processor.py
test/fixtures/migration-py-to-ts/src/typescript/: config.ts  processor.ts  schema.ts  server.ts
test/fixtures/migration-py-to-ts/tests/python/: test_main.py
test/fixtures/migration-py-to-ts/tests/typescript/: server.test.ts
(+129 files in other folders)
